/*
Copyright (c) Advanced Micro Devices, Inc. All rights reserved.

Licensed under the Apache License, Version 2.0 (the \"License\");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


//----------------------------------------------------------------------------
///
/// \file
/// AMD Exporter Test Services
///
//----------------------------------------------------------------------------

syntax = "proto3";
option go_package = "gen/testsvc";
package testsvc;

import "google/protobuf/empty.proto";

message TestResult {
    // must be unique ID
    string ID = 1;
    string Name = 2;
}

message TestPostRequest {
    // must be unique ID
    string ID = 1;
    string Name = 2;
}

message TestGetRequest {
    // list of test ID
    repeated string ID = 1;
}

message TestGetResponse {
    repeated TestResult TestResult = 1;
}

service TestService {
    rpc GetTestResult(TestGetRequest) returns (TestGetResponse) {}
    rpc SubmitTestResult(TestPostRequest) returns (TestGetResponse) {}
    rpc List(google.protobuf.Empty) returns (TestGetResponse) {}
    }
